--- a/man/pcl.3
+++ b/man/pcl.3
@@ -21,7 +21,7 @@
 .\"  Original man page source by E.Toernig <froese@gmx.de>
 .\"
 .na
-.TH PCL 3 "1.8" "GNU" "Portable Coroutine Library"
+.TH PCL 3 "1.9" "GNU" "Portable Coroutine Library"
 .SH NAME
 co_create, co_call, co_resume, co_delete, co_exit_to, co_exit, co_current \- C coroutine management
 
@@ -29,6 +29,10 @@ co_create, co_call, co_resume, co_delete, co_exit_to, co_exit, co_current \- C c
 .nf
 .B #include <pcl.h>
 .sp
+.BI "int co_thread_init(void);"
+.sp
+.BI "void co_thread_cleanup(void);"
+.nl
 .BI "coroutine_t co_create(void *" func ", void *" data ", void *" stack ", int " stacksize ");"
 .nl
 .BI "void co_delete(coroutine_t " co ");"
@@ -42,6 +46,13 @@ co_create, co_call, co_resume, co_delete, co_exit_to, co_exit, co_current \- C c
 .BI "void co_exit(void);"
 .nl
 .BI "coroutine_t co_current(void);"
+.nl
+.fi
+
+Link with
+.IR -lpthread
+if you are using a multi-thread version of
+.BR PCL .
 .nl
 .SH DESCRIPTION
 The
@@ -61,6 +72,35 @@ Higher level functionality (scheduler, etc.) is not covered.
 
 .SS Functions
 The following functions are defined:
+.TP
+.BI "int co_thread_init(void);"
+
+If the
+.B PCL
+library is built in multi-thread mode, and if multi threads are actually
+used, this function should be called before calling any
+.B PCL
+function.
+If the
+.B PCL
+library is built in multi-thread mode, but it is used only from one
+thread (the main one, likely), then it is possible to avoid to call
+.BR co_thread_init ().
+Returns 0 in case of success, or an negative error code in case of error.
+
+.TP
+.BI "void co_thread_cleanup(void);"
+If the
+.B PCL
+library is built in multi-thread mode, and if multi threads are actually
+used, this function should be called before the thread exits, or whenever
+the thread decides it won't call the
+.B PCL
+functions anymore.
+A failure in calling
+.BR co_thread_cleanup ()
+will result in resource leakage by the calling application.
+
 .TP
 .BI "coroutine_t co_create(void *" func ", void *" data ", void *" stack ", int " stacksize ");"
 
@@ -166,6 +206,26 @@ This function returns the currently running coroutine.
 
 .SS Notes
 Some interactions with other parts of the system are covered here.
+.TP
+.B Threads
+If the
+.B PCL
+library has been built in multi-thread mode, then it is possible to use
+it in multi-thread software.
+A thread should call
+.BR co_thread_init ()
+before using the
+.B PCL
+APIs, and call
+.BR co_thread_cleanup ()
+before exiting, or when it has done using the
+.B PCL
+APIs.
+.br
+.B WARNING:
+For no reason should two different threads run the same coroutine at the
+same time.
+
 .TP
 .B Signals
 First, a signal handler is not defined to run in any specific
