--- a/INSTALL
+++ b/INSTALL
@@ -234,3 +234,11 @@ configuration-related scripts to be executed by `/bin/bash'.
 `configure' also accepts some other, not widely useful, options.  Run
 `configure --help' for more details.
 
+Building on Windows
+======================
+The supplied  makefile.win32  makefile should be used together with `nmake`
+to build PCL for Windows.
+Once the MSVC environment is properly set, just run:
+
+C:> nmake /f makefile.win32 CFG={release, debug}
+
